ci: log some data during crate publish

--- a/.github/workflows/release_crates.yaml
+++ b/.github/workflows/release_crates.yaml
@@ -87,6 +87,9 @@ jobs:
               CRATE_NAME=$(tq -f "$manifest" .package.name | sed 's/"//g') # remove quotes around package name
               VERSION=$(tq -f "$manifest" .package.version)
 
+              echo "Found crate $CRATE_NAME with version $VERSION in $manifest"
+              cargo search -q "$CRATE_NAME" | grep "$CRATE_NAME = $VERSION"
+
               if cargo search -q "$CRATE_NAME" | grep "$CRATE_NAME = $VERSION"; then
                 echo "$CRATE_NAME ($manifest) is already published with version $VERSION, skipping..."
                 continue
