--- a/.github/workflows/release_crates.yaml
+++ b/.github/workflows/release_crates.yaml
@@ -90,7 +90,7 @@ jobs:
               echo "Found crate $CRATE_NAME with version $VERSION in $manifest"
               cargo search -q "$CRATE_NAME" | grep "$CRATE_NAME = $VERSION"
 
-              if cargo search -q "$CRATE_NAME" | grep "$CRATE_NAME = $VERSION"; then
+              iif cargo search -q "$CRATE_NAME" | grep -q "$CRATE_NAME = $VERSION"; then
                 echo "$CRATE_NAME ($manifest) is already published with version $VERSION, skipping..."
                 continue
               fi
