--- a/.github/workflows/release_crates.yaml
+++ b/.github/workflows/release_crates.yaml
@@ -87,10 +87,14 @@ jobs:
               CRATE_NAME=$(tq -f "$manifest" .package.name | sed 's/"//g') # remove quotes around package name
               VERSION=$(tq -f "$manifest" .package.version)
 
-              echo "Found crate $CRATE_NAME with version $VERSION in $manifest"
-              cargo search -q "$CRATE_NAME" | grep -q "$CRATE_NAME = $VERSION"
+              echo "Running: cargo search -q $CRATE_NAME"
+              SEARCH_OUTPUT=$(cargo search -q "$CRATE_NAME" 2>&1) || {
+                echo "cargo search failed for $CRATE_NAME"
+                echo "$SEARCH_OUTPUT"
+                exit 1
+              }
 
-              if cargo search -q "$CRATE_NAME" | grep -q "$CRATE_NAME = $VERSION"; then
+              if echo "$SEARCH_OUTPUT" | grep -q "$CRATE_NAME = $VERSION"; then
                 echo "$CRATE_NAME ($manifest) is already published with version $VERSION, skipping..."
                 continue
               fi
