--- a/.github/workflows/release_crates.yaml
+++ b/.github/workflows/release_crates.yaml
@@ -99,6 +99,12 @@ jobs:
 
               echo "SEARCH_OUTPUT=$SEARCH_OUTPUT"
 
+              GREP_OUTPUT=$(echo "$SEARCH_OUTPUT" | grep "$CRATE_NAME = \"$VERSION\"") || {
+                echo "grep failed for $CRATE_NAME with version $VERSION"
+                echo "$GREP_OUTPUT"
+                exit 1
+              }
+
               if echo "$SEARCH_OUTPUT" | grep "$CRATE_NAME = \"$VERSION\""; then
                 echo "$CRATE_NAME ($manifest) is already published with version $VERSION, skipping..."
                 continue
