--- a/crates/txtx-cli/Cargo.toml
+++ b/crates/txtx-cli/Cargo.toml
@@ -32,8 +32,6 @@ dotenvy = "0.15.7"
 serde = "1"
 serde_json = "1"
 serde_derive = "1"
-crossterm = "0.28.1"
-ratatui = { version = "0.28.1", features = ["crossterm"] }
 ascii_table = "4.0.3"
 itertools = "0.12.0"
 unicode-width = "0.2.0"
@@ -50,6 +48,9 @@ txtx-lsp = { path = "../txtx-lsp" }
 tower-lsp = { version = "0.20.0" }
 chrono = "0.4.38"
 actix-web = "4"
+indicatif = "0.18.0"
+fern = "0.7.1"
+log = "0.4.27"
 
 [features]
 default = ["cli"]
