feat(evm): implement error-stack for improved error handling
- Add error-stack dependency (0.5.0) to EVM addon
- Create centralized error module with hierarchical error types
- Implement backward-compatible conversion to Diagnostic
- Add demonstration tests showing rich error context
- Create migration guide and documentation

--- a/addons/evm/Cargo.toml
+++ b/addons/evm/Cargo.toml
@@ -40,6 +40,7 @@ alloy-provider = { version = "0.14", default-features = false, features = ["debu
 alloy-rpc-types = { version = "0.14", features = ["trace"] }
 alloy-signer-local = { version = "0.14", features = ["mnemonic"] }
 thiserror = "1.0.62"
+error-stack = "0.5.0"
 toml = "0.5"
 foundry-block-explorers = "0.13.0"
 foundry-compilers-artifacts-solc = "0.14"
