fix(evm): migrate tests from MigrationHelper to FixtureBuilder and add instrumentation
- Fix syntax errors in comprehensive_error_tests.rs where MigrationHelper was removed
- Fix basic_execution_test.rs to use FixtureBuilder pattern
- Correct FixtureBuilder to create proper runbook directory structure (runbooks/name/main.tx)
- Add comprehensive instrumentation for test debugging:
  - Project structure creation logging
  - Runbook registration in txtx.yml
  - Execution flow tracing
  - Output file discovery logging
  - Error context with directory listings
- Fix txtx.yml generation to properly register multiple runbooks as directories
- Add validation checks before runbook execution

This resolves the broken test files and provides much better visibility into test failures,
addressing the ironic situation where we couldn't use error-stack for debugging the tests themselves.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,22 @@ txtx-addon-network-svm = { path = "addons/svm/core" }
 txtx-addon-telegram = { path = "addons/telegram" }
 txtx-addon-sp1 = { path = "addons/sp1" }
 uuid = { version = "1.15.1", features = ["v4", "serde", "js"] }
+
+
+[profile.dev]
+incremental = true
+debug = 1  # Reduced debug info
+
+[profile.test]
+incremental = true
+debug = 0  # No debug info for tests - HUGE speedup
+codegen-units = 256
+opt-level = 0
+
+# Optimize dependencies even in dev/test
+[profile.dev.package."*"]
+opt-level = 2
+
+[profile.test.package."*"]
+opt-level = 2
+
