--- a/addons/evm/Cargo.toml
+++ b/addons/evm/Cargo.toml
@@ -66,5 +66,6 @@ txtx-core = { path = "../../crates/txtx-core" }
 reqwest = { version = "0.12", features = ["blocking", "json"] }
 serde_json = "1.0"
 tempfile = "3.8"
+serial_test = "3.0"
 
 
