feat(svm-types/svm-core): index token accounts (#318)
* chore(svm-types): cleanup pda/event subgraphs

* feat(svm-types/svm-core): add token_account subgraphs

* fix(svm-types): remove write_version from subgraph pda updates

* fix kaigan version

* chore: bump svm crate versions

--- a/addons/svm/core/Cargo.toml
+++ b/addons/svm/core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "txtx-addon-network-svm"
 description = "Primitives for executing Solana runbooks"
-version = "0.3.5"
+version = "0.3.6"
 edition = { workspace = true }
 license = "Apache-2.0"
 repository = { workspace = true }
@@ -33,7 +33,7 @@ convert_case = "0.6.0"
 solana-record-service-client = "0.1.0"
 # srs is using an old version of borsh, so we need to use the same version
 borsh = { version = "0.10", package = "borsh", features = ["std"] }
-kaigan = "0.2.6"
+kaigan = "=0.3.0"
 
 [dev-dependencies]
 txtx-test-utils = { path = "../../../crates/txtx-test-utils" }
