ci: use `npm ci` in supervisor build

--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -119,7 +119,7 @@ jobs:
       - name: Build Supervisor UI
         run: |
           cd txtx-supervisor-ui
-          npm run i
+          npm run ci
           npm run build
           cd ..
           
