--- a/addons/svm/core/Cargo.toml
+++ b/addons/svm/core/Cargo.toml
@@ -20,10 +20,11 @@ async-recursion = "1"
 bincode = "1.3.3"
 solana-sdk = { version = "2.2.1", features = ["borsh"] }
 solana-message = { version = "2.2.1", features = ["serde"] }
+solana-sha256-hasher = "2.2.1"
 solana-client = "2.2.1"
-spl-associated-token-account = "6.0.0"
-spl-token = "7.0.0"
-spl-token-2022 = "7.0.0"
+spl-associated-token-account = "7.0.0"
+spl-token = "8.0.0"
+spl-token-2022 = "8.0.1"
 solana_idl = "0.2.0"
 borsh_1_5_1 = { version = "1.5.1", package = "borsh" }
 tiny-bip39 = "0.8.2"
