--- a/addons/svm/core/Cargo.toml
+++ b/addons/svm/core/Cargo.toml
@@ -9,43 +9,50 @@ keywords = { workspace = true }
 categories = { workspace = true }
 
 [dependencies]
-# txtx-addon-kit = { version = "0.2.2", default-features = false }
 txtx-addon-kit = { workspace = true, default-features = false }
 txtx-addon-network-svm-types = { path = "../types" }
-lazy_static = "1.4.0"
-serde_json = "1.0.113"
-serde = "1"
-serde_derive = "1"
-async-recursion = "1"
-bincode = "1.3.3"
-solana-sdk = { version = "2.2.1", features = ["borsh"] }
-solana-message = { version = "2.2.1", features = ["serde"] }
-solana-sha256-hasher = "2.2.1"
-solana-client = "2.2.1"
-spl-associated-token-account = "7.0.0"
-spl-token = "8.0.0"
-spl-token-2022 = "8.0.1"
-solana_idl = "0.2.0"
-borsh_1_5_1 = { version = "1.5.1", package = "borsh" }
-tiny-bip39 = "0.8.2"
-convert_case = "0.6.0"
+lazy_static = { workspace = true }
+serde_json = { workspace = true }
+serde = { workspace = true }
+bs58 = { workspace = true }
+bincode = { workspace = true }
+solana-message = { workspace = true }
+solana-sha256-hasher = { workspace = true }
+solana-signature = { workspace = true }
+solana-instruction = { workspace = true }
+solana-client = { workspace = true }
+solana-hash = { workspace = true }
+solana-packet = { workspace = true }
+solana-keypair = { workspace = true }
+solana-signer = { workspace = true }
+solana-clock = { workspace = true }
+solana-commitment-config = { workspace = true }
+solana-sdk-ids = { workspace = true }
+solana-account = { workspace = true }
+solana-system-interface = { workspace = true }
+solana-loader-v3-interface = { workspace = true, features = ["bincode"] }
+solana-pubkey = { workspace = true }
+solana-transaction = { workspace = true, features = ["verify"] }
+spl-associated-token-account = { workspace = true }
+spl-token = { workspace = true }
+spl-token-2022 = { workspace = true }
+solana_idl = { workspace = true }
+borsh_1_5_1 = { workspace = true, package = "borsh" }
+tiny-bip39 = { workspace = true }
+convert_case = { workspace = true }
 
 # Solana Record Service Dependencies
-solana-record-service-client = "0.1.0"
-# srs is using an old version of borsh, so we need to use the same version
+solana-record-service-client = { workspace = true }
 borsh = { version = "0.10", package = "borsh", features = ["std"] }
+# srs is using an old version of borsh, so we need to use the same version
 kaigan = "=0.3.0"
 
 [dev-dependencies]
 txtx-test-utils = { path = "../../../crates/txtx-test-utils" }
 
 [features]
-default = [
-  "txtx-addon-kit/default"
-]
-wasm = [
-  "txtx-addon-kit/wasm",
-]
+default = ["txtx-addon-kit/default"]
+wasm = ["txtx-addon-kit/wasm"]
 
 [lib]
 crate-type = ["cdylib", "rlib"]
