--- a/addons/svm/types/Cargo.toml
+++ b/addons/svm/types/Cargo.toml
@@ -9,25 +9,21 @@ keywords = { workspace = true }
 categories = { workspace = true }
 
 [dependencies]
-borsh = "1.5.1"
-convert_case = "0.6.0"
-solana-pubkey = { version = "2.2.1", features = ["serde", "borsh"]}
-solana-transaction-context = { version = "2.2.1", features = ["serde"]}
-solana-clock = { version = "2.2.1", features = ["serde"]}
-solana-blake3-hasher = { version = "2.2.1", features = ["serde"]}
-solana-epoch-info = { version = "2.2.1", features = ["serde"]}
-solana-message = { version = "2.2.1", features = ["serde"]}
-solana-keypair = { version = "2.2.1" }
-solana-signature = { version = "2.2.1", features = ["serde"]}
-solana-transaction = { version = "2.2.1", features = ["serde", "bincode"]}
-solana-transaction-error = { version = "2.2.1", features = ["serde"]}
-solana-transaction-status-client-types = { version = "2.2.1" }
-anchor-lang-idl = { version = "0.1.2", features = ["convert"] }
+borsh = { workspace = true }
+convert_case = { workspace = true }
+solana-pubkey = { workspace = true }
+solana-clock = { workspace = true }
+solana-message = { workspace = true }
+solana-keypair = { workspace = true }
+solana-signature = { workspace = true }
+solana-transaction = { workspace = true }
+solana-cli-output = { workspace = true }
+solana-transaction-status-client-types = { workspace = true }
+anchor-lang-idl = { workspace = true, features = ["convert"] }
 txtx-addon-kit = { workspace = true, default-features = false }
-lazy_static = "1.4.0"
-serde = "1"
-serde_json = "1"
-serde_derive = "1"
+lazy_static = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 
 [dev-dependencies]
-test-case = "3.3"
+test-case = { workspace = true }
