chore: add build configuration and development tooling
Add comprehensive build infrastructure and developer tooling to streamline
development workflow and handle build constraints:

**Build System**:
- Cargo aliases for building without supervisor UI (requires privileged tooling)
- Separate unit and integration test targets for CLI, linter, and LSP
- Just recipes providing ergonomic task runner interface
- Development RUSTFLAGS to suppress common warnings during iteration

**VSCode Integration**:
- Launch configurations for debugging CLI, LSP, and tests
- Task definitions for common build operations
- Settings for Rust development with recommended extensions

**Performance Monitoring**:
- Criterion benchmarks for LSP request handling

**Architecture Documentation**:
- C4 diagram generation from code annotations
- Structurizr Lite integration for viewing diagrams
- Module dependency graph generation

Add Cargo configuration (.cargo/config.toml):
- build-cli, build-cli-release: Build without supervisor UI
- test-cli-unit, test-cli-int: Separate unit and integration test targets
- test-cli-unit-linter, test-cli-int-linter: Linter-specific tests
- test-cli-unit-lsp, test-cli-int-lsp: LSP-specific tests
- test-hcl-diagnostics, test-lsp-validation: Focused validation tests
- tokio_unstable rustflag for async runtime features

Add justfile with 30 recipes (195 lines):

**Build recipes**:
- build, build-release: Build CLI with/without optimizations
- check: Fast syntax/type checking without codegen
- fmt: Format code with rustfmt
- clean: Remove build artifacts

**Test recipes**:
- cli-unit, cli-int: CLI unit and integration tests
- lint-unit, lint-int: Linter-specific unit and integration tests
- lsp-unit, lsp-int: LSP-specific unit and integration tests
- test <name>: Run specific test by name
- test-verbose: Run tests with full output
- watch: Auto-run tests on file changes

**Coverage recipes**:
- coverage: Generate HTML coverage report
- coverage-ci: Generate JSON cove

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,32 @@
 [alias]
+# Build aliases
 txtx-install = "install --path crates/txtx-cli --features supervisor_ui --features ovm --locked --force"
+build-cli = "build --package txtx-cli --no-default-features --features cli"
+build-cli-release = "build --package txtx-cli --no-default-features --features cli --release"
+
+# Test aliases following pattern: test-[scope]-[type]-[target]
+# Unit tests (code in src/)
+test-cli-unit = "test --package txtx-cli --bin txtx --no-default-features --features cli"
+test-cli-unit-linter = "test --package txtx-cli --bin txtx --no-default-features --features cli cli::linter_impl::"
+test-cli-unit-lsp = "test --package txtx-cli --bin txtx --no-default-features --features cli cli::lsp::"
+test-core-unit = "test --package txtx-core --lib"
+test-addon-kit-unit = "test --package txtx-addon-kit --lib"
+
+# Integration tests (code in tests/)
+test-cli-int = "test --package txtx-cli --tests --no-default-features --features cli"
+test-cli-int-linter = "test --package txtx-cli --test linter_tests_builder --no-default-features --features cli"
+test-cli-int-lsp = "test --package txtx-cli --test lsp_tests_builder --no-default-features --features cli"
+
+# HCL validation tests
+test-hcl-diagnostics = "test --package txtx-cli --bin txtx --no-default-features --features cli cli::lsp::tests::hcl_diagnostics_test"  # Test HCL diagnostic extraction
+test-lsp-validation = "test --package txtx-cli --bin txtx --no-default-features --features cli cli::lsp::tests::validation_integration_test"  # Test LSP validation pipeline
+
+# Convenience aliases
+test-cli = "test --package txtx-cli --no-default-features --features cli"  # All CLI tests
+test-cli-linter = "test --package txtx-cli --bin txtx --no-default-features --features cli cli::linter_impl::"  # All linter unit tests
 
 [build]
 rustflags = ["--cfg", "tokio_unstable"]
+
+
+
