chore: add build configuration and development tooling
## Architecture
Add comprehensive build infrastructure and developer tooling to streamline
development workflow and handle build constraints:

**Build System**:
- Cargo aliases for building without supervisor UI (requires privileged tooling)
- Separate unit and integration test targets for CLI, linter, and LSP
- Just recipes providing ergonomic task runner interface
- Development RUSTFLAGS to suppress common warnings during iteration

**VSCode Integration**:
- Launch configurations for debugging CLI, LSP, and tests
- Task definitions for common build operations
- Settings for Rust development with recommended extensions

**Performance Monitoring**:
- Criterion benchmarks for LSP request handling

**Architecture Documentation**:
- C4 diagram generation from code annotations
- Structurizr Lite integration for viewing diagrams
- Module dependency graph generation

## Changes
Add Cargo configuration (.cargo/config.toml):
- build-cli, build-cli-release: Build without supervisor UI
- test-cli-unit, test-cli-int: Separate unit and integration test targets
- test-cli-unit-linter, test-cli-int-linter: Linter-specific tests
- test-cli-unit-lsp, test-cli-int-lsp: LSP-specific tests
- test-hcl-diagnostics, test-lsp-validation: Focused validation tests
- tokio_unstable rustflag for async runtime features

Add justfile with 30 recipes (195 lines):

**Build recipes**:
- build, build-release: Build CLI with/without optimizations
- check: Fast syntax/type checking without codegen
- fmt: Format code with rustfmt
- clean: Remove build artifacts

**Test recipes**:
- cli-unit, cli-int: CLI unit and integration tests
- lint-unit, lint-int: Linter-specific unit and integration tests
- lsp-unit, lsp-int: LSP-specific unit and integration tests
- test <name>: Run specific test by name
- test-verbose: Run tests with full output
- watch: Auto-run tests on file changes

**Coverage recipes**:
- coverage: Generate HTML coverage report
- cove

--- a/crates/txtx-cli/Cargo.toml
+++ b/crates/txtx-cli/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/main.rs"
 
 [dependencies]
 txtx-core = { workspace = true }
+txtx-addon-kit = { workspace = true }
 txtx-supervisor-ui = { workspace = true, optional = true }
 txtx-cloud = { workspace = true }
 txtx-serve = { workspace = true, optional = true }
@@ -32,26 +33,34 @@ dotenvy = "0.15.7"
 serde = "1"
 serde_json = "1"
 serde_derive = "1"
+serde_yml = "0.0.12"
 ascii_table = "4.0.3"
 itertools = "0.12.0"
 unicode-width = "0.2.0"
 ansi_term = "0.12.1"
 atty = "0.2.14"
-tokio = "1.37.0"
+tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync"] }
+dashmap = "5.5"
+lru = "0.12"
 openssl = { version = "*", features = ["vendored"] }
 openssl-sys = { version = "*", features = ["vendored"] }
 dialoguer = "0.11.0"
 console = "0.15.8"
 convert_case = "0.6.0"
 rusqlite = "0.31.0"
-txtx-lsp = { path = "../txtx-lsp" }
-tower-lsp = { version = "0.20.0" }
+lsp-server = "0.7.6"
+lsp-types = "0.94.0"
+crossbeam-channel = "0.5"
 chrono = "0.4.38"
 actix-web = "4"
 indicatif = "0.18.0"
 fern = "0.7.1"
+colored = "2.0"
 log = "0.4.27"
 lazy_static = "1.4.0"
+regex = "1.10"
+toml = "0.8"
+futures = "0.3"
 
 [features]
 default = ["cli", "supervisor_ui"]
@@ -69,3 +78,11 @@ stacks = ["txtx-addon-network-stacks"]
 
 [dev-dependencies]
 test-case = "*"
+criterion = { version = "0.5", features = ["html_reports"] }
+serde_json = "1"
+txtx-test-utils = { path = "../txtx-test-utils" }
+tempfile = "3"
+
+[[bench]]
+name = "lsp_performance"
+harness = false
