--- a/addons/svm/core/Cargo.toml
+++ b/addons/svm/core/Cargo.toml
@@ -17,10 +17,25 @@ serde_json = "1.0.113"
 serde = "1"
 serde_derive = "1"
 async-recursion = "1"
+bs58 = "0.5.0"
 bincode = "1.3.3"
-solana-sdk = { version = "2.2.1", features = ["borsh"] }
 solana-message = { version = "2.2.1", features = ["serde"] }
 solana-client = "2.2.1"
+solana-clock = "2.2.1"
+solana-sdk-ids = "2.2.1"
+solana-account = "2.2.1"
+solana-keypair = "2.2.1"
+solana-pubkey = "2.2.1"
+solana-hash = "2.2.1"
+solana-transaction = { version = "2.2.1", features = ["verify"] }
+solana-signature = "2.2.1"
+solana-signer = "2.2.1"
+solana-instruction = "2.2.1"
+solana-packet = "2.2.1"
+solana-native-token = "2.2.1"
+solana-commitment-config = "2.2.1"
+solana-loader-v3-interface = { version = "5.0.0", features = ["bincode"] }
+solana-system-interface = { version = "1.0.0", features = ["bincode"] }
 spl-associated-token-account = "6.0.0"
 spl-token = "7.0.0"
 spl-token-2022 = "7.0.0"
