Restore old LSP dependencies for base branch compatibility
The base branch (525ba523) includes an old LSP implementation using
tower-lsp and txtx-lsp crate. Restore these dependencies so the
linter branch builds successfully:

- Add txtx-lsp to workspace members
- Add tower-lsp dependency for old LSP implementation
- Add txtx-lsp as dependency of txtx-cli (required by native_bridge.rs)

--- a/crates/txtx-cli/Cargo.toml
+++ b/crates/txtx-cli/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 [dependencies]
 txtx-core = { workspace = true }
 txtx-addon-kit = { workspace = true }
+txtx-lsp = { path = "../txtx-lsp" }
 txtx-supervisor-ui = { workspace = true, optional = true }
 txtx-cloud = { workspace = true }
 txtx-serve = { workspace = true, optional = true }
@@ -33,23 +34,19 @@ dotenvy = "0.15.7"
 serde = "1"
 serde_json = "1"
 serde_derive = "1"
-serde_yml = "0.0.12"
 ascii_table = "4.0.3"
 itertools = "0.12.0"
 unicode-width = "0.2.0"
 ansi_term = "0.12.1"
 atty = "0.2.14"
-tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync"] }
-dashmap = "5.5"
-lru = "0.12"
+tokio = "1.37.0"
 openssl = { version = "*", features = ["vendored"] }
 openssl-sys = { version = "*", features = ["vendored"] }
 dialoguer = "0.11.0"
 console = "0.15.8"
 convert_case = "0.6.0"
 rusqlite = "0.31.0"
-lsp-server = "0.7.6"
-lsp-types = "0.94.0"
+tower-lsp = "0.20.0"
 crossbeam-channel = "0.5"
 chrono = "0.4.38"
 actix-web = "4"
@@ -59,9 +56,6 @@ colored = "2.1"
 log = "0.4.27"
 lazy_static = "1.4.0"
 yansi = "1.0"
-regex = "1.10"
-toml = "0.8"
-futures = "0.3"
 
 [features]
 default = ["cli", "supervisor_ui"]
