Replace magic strings with ConstructType enum constants
Add type-safe ConstructType enum using strum to eliminate scattered magic strings for construct identifiers ("action", "variable", "output", etc.) throughout the codebase.

Previous pattern matching used inconsistent string literals that created maintenance burden and lacked compile-time safety. The new ConstructType enum provides a single source of truth for all construct identifiers with compile-time guarantees.

Changes:
- Add ConstructType enum with strum derives (AsRefStr, Display, EnumString)
- Define string constants for all construct types (ACTION, VARIABLE, OUTPUT, SIGNER, ADDON, MODULE, FLOW, IMPORT, PROMPT, RUNBOOK)
- Update BlockContext::block_type() to use constants
- Update CommandInstanceType::to_ident() to use constants
- Update PreConstructData::construct_type() to use constants
- Replace string pattern matching in workspace_context.rs with ConstructType constants
- Update txtx-serve construct type comparison

--- a/crates/txtx-addon-kit/Cargo.toml
+++ b/crates/txtx-addon-kit/Cargo.toml
@@ -28,7 +28,8 @@ highway = "1.1.0"
 rand = "0.8.5"
 serde_json = "1"
 sha2 = "0.10.8"
-indexmap = { version = "2.2.6", features = ["serde"] } 
+indexmap = { version = "2.2.6", features = ["serde"] }
+strum = { version = "0.26", features = ["derive"] }
 wasm-bindgen = { version = "0.2.93", optional = true }
 wasm-bindgen-futures = { version = "0.4.41", optional = true }
 hmac = "0.12.0"
