--- a/addons/svm/core/Cargo.toml
+++ b/addons/svm/core/Cargo.toml
@@ -30,7 +30,7 @@ solana-hash = "3.0.0"
 solana-transaction = { version = "3.0.0", features = ["verify"] }
 solana-signature = "3.0.0"
 solana-signer = "3.0.0"
-solana-instruction = "3.0.0"
+solana-instruction = { version = "3.0.0", features = ["serde"] }
 solana-packet = "3.0.0"
 solana-sha256-hasher = "3.0.0"
 solana-commitment-config = "3.0.0"
