--- a/addons/svm/core/Cargo.toml
+++ b/addons/svm/core/Cargo.toml
@@ -19,6 +19,7 @@ serde_derive = "1"
 async-recursion = "1"
 bs58 = "0.5.0"
 bincode = "1.3.3"
+log = "0.4.27"
 solana-message = { version = "3.0.0", features = ["serde"] }
 solana-client = "3.0.0"
 solana-clock = "3.0.0"
