feat: Add validation infrastructure for enhanced diagnostics (#346)
* Add architecture premise

Update ADR-001 with unified type definitions evolution

Document how Micaiah identified type duplication between runtime parser
and validation infrastructure, leading to the validator-merge refactor.

The evolution:
- Runtime parser had Diagnostic, FileLocation types
- Validation introduced ValidationError, LocatedInputRef (duplicates!)
- Unified these into common type definitions in txtx-core/validation
- Runtime, linter, and LSP now share the same type definitions

Key insights:
- Eliminates type duplication (one Diagnostic type, not two)
- Rust compiler enforces consistent usage across all systems
- Validation logic remains isolated (preserves original safety)
- Type definitions are DRY while validation stays parallel

Suggested by Micaiah, refactored collaboratively.

* feat(core): add validation infrastructure and variable extraction

## Architecture
Introduce a shared validation layer in txtx-core that serves as the foundation
for both CLI linting and LSP real-time diagnostics. The architecture consists of:

- **ValidationContext**: Central state management for all validation operations,
  reducing parameter passing through the validation pipeline
- **HCL Validator**: Two-tier system (BasicHclValidator and FullHclValidator)
  that performs AST traversal and structural validation
- **Runbook Collector**: Extracts domain-specific items (inputs, variables,
  actions, signers) from runbook files for analysis
- **Rule System**: Extensible linter rule infrastructure with RuleIdentifier
  supporting both core and addon-scoped rules

## Changes
Add validation module (txtx-core/src/validation/):
- context.rs: ValidationContext with builder pattern for flexible configuration
- validator.rs: High-level validate_runbook API with ValidatorConfig
- hcl_validator/: AST visitor pattern with block processors and dependency graph
- hcl_diagnostics.rs: Convert HCL parse errors to user

--- a/crates/txtx-core/Cargo.toml
+++ b/crates/txtx-core/Cargo.toml
@@ -18,7 +18,7 @@ getrandom = { version = "0.2", features = ["js"] }
 lazy_static = "1.4.0"
 jaq-interpret = "1.2.1"
 jaq-parse = "1.0.2"
-serde_json = { version = "1", features = ["preserve_order"] } 
+serde_json = { version = "1", features = ["preserve_order"] }
 petgraph = "0.8.2"
 libsecp256k1 = "0.7.0"
 ripemd = "0.1.3"
@@ -29,6 +29,8 @@ chrono = "0.4.38"
 similar = "2.5.0"
 better-debug = "1.0.1"
 serde_with = "3.11.0"
+strum = { version = "0.26", features = ["derive"] }
+thiserror = "1.0"
 tokio = { version = "1.37.0", features = ["sync"] }
 mustache = "0.9.0"
 
