Add linter CLI command with validation rules and formatters
Introduce txtx lint command for validating runbooks against workspace
manifests. Includes support for multiple output formats (stylish, json,
github, csv) and configurable rules. Add basic unit and integration tests.

Note: Test infrastructure does not yet support multi-file runbook scenarios.

--- a/crates/txtx-cli/Cargo.toml
+++ b/crates/txtx-cli/Cargo.toml
@@ -13,6 +13,8 @@ path = "src/main.rs"
 
 [dependencies]
 txtx-core = { workspace = true }
+txtx-addon-kit = { workspace = true }
+txtx-lsp = { path = "../txtx-lsp" }
 txtx-supervisor-ui = { workspace = true, optional = true }
 txtx-cloud = { workspace = true }
 txtx-serve = { workspace = true, optional = true }
@@ -32,6 +34,7 @@ dotenvy = "0.15.7"
 serde = "1"
 serde_json = "1"
 serde_derive = "1"
+serde_yml = "0.0.11"
 ascii_table = "4.0.3"
 itertools = "0.12.0"
 unicode-width = "0.2.0"
@@ -44,14 +47,18 @@ dialoguer = "0.11.0"
 console = "0.15.8"
 convert_case = "0.6.0"
 rusqlite = "0.31.0"
-txtx-lsp = { path = "../txtx-lsp" }
-tower-lsp = { version = "0.20.0" }
+tower-lsp = "0.20.0"
+crossbeam-channel = "0.5"
 chrono = "0.4.38"
 actix-web = "4"
 indicatif = "0.18.0"
 fern = "0.7.1"
+colored = "2.1"
 log = "0.4.27"
 lazy_static = "1.4.0"
+yansi = "1.0"
+thiserror = "1.0"
+strum = { version = "0.26", features = ["derive"] }
 
 [features]
 default = ["cli", "supervisor_ui"]
@@ -69,3 +76,8 @@ stacks = ["txtx-addon-network-stacks"]
 
 [dev-dependencies]
 test-case = "*"
+criterion = { version = "0.5", features = ["html_reports"] }
+serde_json = "1"
+txtx-test-utils = { path = "../txtx-test-utils" }
+tempfile = "3"
+proptest = "1.4"
